--- a/blog-frontend/package.json
+++ b/blog-frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/core": "7.1.0",
     "@svgr/webpack": "2.4.1",
+    "axios": "^0.18.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
@@ -38,6 +39,7 @@
     "jest-resolve": "23.6.0",
     "marked": "^0.5.1",
     "mini-css-extract-plugin": "0.4.3",
+    "moment": "^2.22.2",
     "node-sass": "^4.10.0",
     "open-color": "^1.6.3",
     "optimize-css-assets-webpack-plugin": "5.0.1",
@@ -47,6 +49,7 @@
     "postcss-preset-env": "6.0.6",
     "postcss-safe-parser": "4.0.1",
     "prismjs": "^1.15.0",
+    "query-string": "^5.1.1",
     "react": "^16.6.0",
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.1.1",
@@ -56,6 +59,7 @@
     "redux": "^4.0.1",
     "redux-actions": "^2.6.4",
     "redux-pender": "^1.2.1",
+    "remove-markdown": "^0.3.0",
     "resolve": "1.8.1",
     "sass-loader": "^7.1.0",
     "style-loader": "0.23.0",
@@ -125,5 +129,6 @@
     "presets": [
       "react-app"
     ]
-  }
+  },
+  "proxy": "http://localhost:4000"
 }
