--- a/blog-backend/package.json
+++ b/blog-backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src",
+    "start": "cross-env NODE_PATH=src node src",
     "start:dev": "cross-env NODE_PATH=src nodemon --watch src/ src/index.js"
   },
   "author": "",
